Hireforce/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Email__c</fullName>
        <label>Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Id__c</fullName>
        <displayFormat>APP_ID-{0000000}</displayFormat>
        <label>Application Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruiter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications Managed by Me</relationshipLabel>
        <relationshipName>Applications_Managed_by_Me</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Initial Screening Done</fullName>
                </value>
                <value>
                    <fullName>Interview Scheduled</fullName>
                </value>
                <value>
                    <fullName>Under consideration</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Offer Sent</fullName>
                </value>
                <value>
                    <fullName>Offer Accepted</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applicant_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Job__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>